# D365TestCaseAutomation

./: .replit  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  replit.md  schemas.py  test_executor.py
attached_assets/: Pasted-I-m-building-a-web-based-platform-to-create-run-and-manage-automated-test-cases-for-Dynamics-365--1751559534261_1751559534261.txt
frontend/: package-lock.json  package.json
playwright_templates/: base_test.js
routers/: __init__.py  auth.py  results.py  tests.py
sql/: schema.sql
static/: app.js  index.html  styles.css
static/components/: AuthForm.js  ResultsViewer.js  TestBuilder.js  TestRunner.js
