[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-routers>=0.2",
    "fastapi>=0.115.14",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
